remove bootstrap form-control class to fix buggy radio buttons on smaller devices

--- a/css/custom.css
+++ b/css/custom.css
@@ -17,13 +17,6 @@ img.logo {
   margin: auto;
 }
 
-div.radio {
-  line-height:2.3;
-}
-
-input.form-control {
-  margin-top: 0;
-}
 li {
   box-sizing: border-box;
   font-size: 1.5em;
